--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,8 @@
-ul {
-    list-style-type: none;
-}
-
 body {
     background: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     color: #212121;
 
-}
-a:link {
-    color: #212121;
-    text-decoration: none;
-}
-a:visited {
-    color: #212121;
-}
-a:hover,
-a:focus {
-    color: #2196F3;
 }
 
 /* Верхняя линия */
@@ -39,28 +24,43 @@ a.logo {
     color: #2196F3;
 }
 
+a.logo {
+    text-decoration: none;
+}
+
 .logo-black {
     color: #000000;
 }
 
 .navigators {
-
+    list-style-type: none;
 }
 
 .navigator {
-    font-style: normal;
+    color: #212121;
+    text-decoration: none;
+    font-family: inherit;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
 }
 
-.head-infos {
+.current-page {
+    color: #2196F3;
+}
 
+a.navigator:hover,
+a.navigator:focus {
+    color: #2196F3;
+}
+
+.head-infos {
+    list-style-type: none;
 }
 
 .head-info {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -69,11 +69,14 @@ a.logo {
 
 a.head-info {
     color: #757575;
+    text-decoration: none;
 }
+
 
 a.head-info:hover,
 a.head-info:focus {
     color: #2196F3;
+    text-decoration: none;
 }
 /* Шапка Профиля */
 
@@ -82,7 +85,7 @@ a.head-info:focus {
 }
 
 .solutions-text {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 900;
     font-size: 44px;
     line-height: 60px;
@@ -94,13 +97,15 @@ a.head-info:focus {
 /* Кнопка */
 
 .button-background {
+    cursor: pointer;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
 .button-text {
-    font-style: normal;
+    cursor: pointer;
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
@@ -114,11 +119,11 @@ a.head-info:focus {
 }
 
 .features {
-
+    list-style-type: none;
 }
 
 .feature {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -127,7 +132,7 @@ a.head-info:focus {
 }
 
 .about-feature {
-    font-style: normal;
+    font-family: inherit;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
@@ -140,7 +145,7 @@ a.head-info:focus {
 }
 
 .head-doing {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
@@ -149,7 +154,7 @@ a.head-info:focus {
 }
 
 .works {
-
+    list-style-type: none;
 }
 /* Наша команда */
 
@@ -158,12 +163,16 @@ a.head-info:focus {
 }
 
 .team-head {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 700;
     font-size: 36px;
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
+}
+
+.team-members {
+    list-style-type: none;
 }
 
 .card-shadow {
@@ -173,7 +182,7 @@ a.head-info:focus {
 }
 
 .team-member {
-    font-style: normal;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
@@ -182,8 +191,7 @@ a.head-info:focus {
 }
 
 .member-description {
-    font-style: normal;
-    font-weight: 400;
+    font-family: inherit;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
@@ -196,8 +204,8 @@ footer {
 }
 
 a.footer-logo {
+    text-decoration: none;
     font-family: 'Raleway';
-    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
@@ -208,25 +216,29 @@ a.footer-logo {
 }
 a.location {
     font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
+    text-decoration: none;
     color: #FFFFFF;
+}
+
+.footer-ul {
+    list-style-type: none;
 }
 
 a.footer-info {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
+    text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
 }
 a.footer-info:hover,
 a.footer-info:focus {
+    text-decoration: none;
     color: #2196F3  ;
 }
 /* Указатели */
@@ -234,14 +246,11 @@ a.footer-info:focus {
 /*  ПОРТФОЛИО */
 /* Проекты */ 
 .project-buttons {
-
+    list-style-type: none;
 }
 
 .project-button-background {
-    width: 128px;
-    height: 38px;
-    left: 576px;
-    top: 174px;
+    cursor: pointer;
     background: #F5F4FA;
     border-radius: 4px;
     border-color: transparent; 
@@ -249,18 +258,15 @@ a.footer-info:focus {
 
 .project-button-background:hover,
 .project-button-background:focus {
-    width: 73px;
-    height: 38px;
-    left: 495px;
-    top: 174px;
+    cursor: pointer;
     background: #2196F3;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 
 .project-button-text {
-    font-family: 'Roboto';
-    font-style: normal;
+    cursor: pointer;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
@@ -271,8 +277,8 @@ a.footer-info:focus {
 
 .project-button-text:hover,
 .project-button-text:focus {
-    font-family: 'Roboto';
-    font-style: normal;
+    cursor: pointer;
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
@@ -283,6 +289,10 @@ a.footer-info:focus {
 
 .portfolio {
 
+}
+
+.projects {
+    list-style-type: none;
 }
 
 .projects-box {
@@ -296,8 +306,7 @@ a.footer-info:focus {
 }
 
 .project-name {
-    font-family: 'Roboto';
-    font-style: normal;
+    font-family: inherit;
     font-weight: 700;
     font-size: 18px;
     line-height: 36px;
@@ -306,9 +315,7 @@ a.footer-info:focus {
 }
 
 .project-description {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
+    font-family: inherit;
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 0.03em;
