--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
+:root {
+    --brand-color: #2196f3;
+    --primary-color: #212121;
+    --description-color: #757575;
+}
+
+
 body {
     background: #FFFFFF;
     font-family: 'Roboto', sans-serif;
-    color: #212121;
+    color:var(--primary-color);
 
 }
+
 
 /* Верхняя линия */
 
@@ -21,7 +29,7 @@ a.logo {
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-    color: #2196F3;
+    color: var(--brand-color);
 }
 
 a.logo {
@@ -37,7 +45,7 @@ a.logo {
 }
 
 .navigator {
-    color: #212121;
+    color: var(--primary-color);
     text-decoration: none;
     font-family: inherit;
     font-weight: 500;
@@ -47,14 +55,13 @@ a.logo {
 }
 
 
-
-.navigator:current {
-    color: #000000;
+.current-page {
+    color: var(--brand-color);
 }
 
 a.navigator:hover,
 a.navigator:focus {
-    color: #2196F3;
+    color: var(--brand-color);
 }
 
 .head-infos {
@@ -70,14 +77,14 @@ a.navigator:focus {
 }
 
 a.head-info {
-    color: #757575;
+    color: var(--description-color);
     text-decoration: none;
 }
 
 
 a.head-info:hover,
 a.head-info:focus {
-    color: #2196F3;
+    color: var(--brand-color);
     text-decoration: none;
 }
 /* Шапка Профиля */
@@ -100,7 +107,7 @@ a.head-info:focus {
 
 .button-background {
     cursor: pointer;
-    background: #2196F3;
+    background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
@@ -138,7 +145,7 @@ a.head-info:focus {
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--description-color);
 }
 /* Чем мы занимаемся*/
 
@@ -198,7 +205,7 @@ a.head-info:focus {
     line-height: 19px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--description-color);
 }
 /* Подвал */
 footer {
@@ -211,7 +218,7 @@ a.footer-logo {
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-    color: #2196F3;
+    color: var(--brand-color);
 }
 .logo-white {
     color: #FFFFFF;
@@ -241,7 +248,7 @@ a.footer-info {
 a.footer-info:hover,
 a.footer-info:focus {
     text-decoration: none;
-    color: #2196F3  ;
+    color: var(--brand-color);
 }
 /* Указатели */
 
@@ -261,7 +268,7 @@ a.footer-info:focus {
 .project-button-background:hover,
 .project-button-background:focus {
     cursor: pointer;
-    background: #2196F3;
+    background: var(--brand-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
@@ -274,7 +281,7 @@ a.footer-info:focus {
     line-height: 26px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: var(--primary-color);
 }
 
 .project-button-text:hover,
@@ -313,7 +320,7 @@ a.footer-info:focus {
     font-size: 18px;
     line-height: 36px;
     letter-spacing: 0.06em;
-    color: #212121;
+    color: var(--primary-color);
 }
 
 .project-description {
@@ -321,5 +328,5 @@ a.footer-info:focus {
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--description-color);
 }
